Añadido Create,Select y Details y las pruebas funcionales
