# src/AppForSEII2526.Web/OpenAPIs/swagger2.json
@@ -854,6 +854,10 @@
             "type": "string",
             "nullable": true
           },
+          "descripcion": {
+            "type": "string",
+            "nullable": true
+          },
           "fuelType": {
             "type": "string",
             "nullable": true
@@ -1021,6 +1025,10 @@
         ],
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "name": {
             "minLength": 1,
             "type": "string"
@@ -1056,6 +1064,10 @@
             "type": "integer",
             "format": "int32"
           },
+          "username": {
+            "type": "string",
+            "nullable": true
+          },
           "TotalPrice": {
             "type": "integer",
             "format": "int32",
@@ -1089,6 +1101,10 @@
           "price": {
             "type": "integer",
             "format": "int32"
+          },
+          "username": {
+            "type": "string",
+            "nullable": true
           },
           "TotalPrice": {
             "type": "integer",
@@ -1139,6 +1155,26 @@
           "car": {
             "type": "string",
             "nullable": true
+          },
+          "fuelType": {
+            "type": "string",
+            "nullable": true
+          },
+          "fabricante": {
+            "type": "string",
+            "nullable": true
+          },
+          "price": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "color": {
+            "type": "string",
+            "nullable": true
+          },
+          "descripcion": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1161,10 +1197,6 @@
             "items": {
               "$ref": "#/components/schemas/RentalItemDTO"
             },
-            "nullable": true
-          },
-          "manufacturer": {
-            "type": "string",
             "nullable": true
           },
           "price": {
@@ -1268,10 +1300,6 @@
           "rentingDate": {
             "type": "string",
             "format": "date"
-          },
-          "manufacturer": {
-            "type": "string",
-            "nullable": true
           },
           "price": {
             "type": "integer",
